【优化】结构性调整