@@ -24,7 +24,7 @@ import java.util.function.Predicate;
 @JSONType(seeAlso = {HashMap.class})
 public class LinkedTable<K1, K2, V> implements Serializable, Data2Json {
 
-    private static final Map EMPTY_MAP = Map.of();
+    private static final Map EMPTY_MAP = Collections.emptyMap();
 
     private LinkedHashMap<K1, LinkedHashMap<K2, V>> nodes;
 
