@@ -4,6 +4,7 @@ import org.apache.commons.lang3.StringUtils;
 import wxdgaming.boot2.core.json.FastJsonUtil;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public class String2ByteList {
@@ -22,7 +23,7 @@ public class String2ByteList {
                 }
             }
         } else {
-            arrays = List.of();
+            arrays = Collections.emptyList();
         }
         return arrays;
     }
