@@ -5,6 +5,7 @@ import wxdgaming.game.bean.goods.BagChangeDTO4ItemCfg;
 import wxdgaming.game.basic.core.Reason;
 import wxdgaming.game.basic.core.ReasonDTO;
 
+import java.util.Collections;
 import java.util.List;
 
 public class BagChangeDTO4ItemCfgTest {
@@ -13,7 +14,7 @@ public class BagChangeDTO4ItemCfgTest {
     public void t1() {
 
         BagChangeDTO4ItemCfg build = BagChangeDTO4ItemCfg.builder()
-                .setItemCfgList(List.of())
+                .setItemCfgList(Collections.emptyList())
                 .setReasonDTO(ReasonDTO.of(Reason.CreateRole))
                 .build();
 
